gps and accel combined

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -11,7 +11,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r}
+```{r, warning=FALSE, echo=FALSE, include=FALSE}
 library(tidyverse)
 library(lubridate)
 library(ggmap)
@@ -25,32 +25,41 @@ library(purrr)
 library(activityCounts)
 ```
 
+# Download the sample data here: 
+
+1. [Accel Sample Data](https://www.dropbox.com/s/u8kdsmvkullbv97/accel_sample_data.csv?dl=0) 257.8MB
+2. [GPS Sample Data](https://www.dropbox.com/s/c1iaj76j2kafebh/gps_sample_data.csv?dl=0) 1.2MB
+3. [GPS Drift Data Sample](https://www.dropbox.com/s/c1w0rglr681nurn/gps_3213.csv?dl=0) 1.7MB
+
 # Accelerometer Data Wrangling
 
-These data are from Ethica Data, which is app manufacturer our INTERACT team has been working with for the past 7 years. 
+These data are from Ethica Data, which is app manufacturer our INTERACT team has been working with for the past 7 years.
+
+## Tasks
+
+1. Read in and check data
+2. Check time stamps and consistency
+3. Data processing 
+    * Check frequency for selected method
+4. Wearing? 
+5. Summarize data
+6. Classification
+
+### 1. Read in and check data
 
 ```{r}
-accel_data <- read.csv("accel_sample_data.csv")
+accel_data <- read_csv("accel_sample_data.csv")
 
 glimpse(accel_data)
 
 table(accel_data$user_id)
 ```
 
-# Accel data processing
-
-Tasks
-
-1. Decide which method we are going to use for data processing
-    * ActiGraph Activity Counts (AAC) - [https://cran.r-project.org/web/packages/activityCounts/index.html](https://cran.r-project.org/web/packages/activityCounts/index.html)
-    * Euclidean Norm Minus One (ENMO) - [https://cran.r-project.org/web/packages/GGIR/index.html](https://cran.r-project.org/web/packages/GGIR/index.html)
-    * Monitor Independent Movement Summary (MIMS) [https://cran.r-project.org/web/packages/MIMSunit/index.html](https://cran.r-project.org/web/packages/MIMSunit/index.html)
-    
-### Sorting out time
+### 2. Check time stamps and consistency
 
 These data are different from most accelerometer data because the phone does not capture accelerometer data like a traditional research grade device. It optimizes for battery life and often does not have a consistent number of hertz per second. So unlike data were you will set the hertz to 30 or 100 this will be different. 
 
-# ou will probably have to resample the data... but we are not going to do that today because don't have time. 
+In our case, in real life we would have to resample the data... but we are not going to do that today because don't have time. 
 
 ```{r}
 accel_data$time_factor <- as.factor(accel_data$record_time)
@@ -65,7 +74,7 @@ accel_data <- accel_data %>%
 summary(accel_data$milli)
 ```
 
-# Dealing with time
+#### Dealing with time
 
 ```{r}
 accel_data$day <- day(accel_data$record_time)  ## Create an hour variable
@@ -74,7 +83,16 @@ accel_data$minute <- minute(accel_data$record_time)  ## Create a minute variable
 accel_data$second <- second(accel_data$record_time)  ## Create a second variable
 ``` 
 
-# Calculating ENMO
+### 3. Data processing 
+
+Common data processing methods
+
+1. Decide which method we are going to use for data processing
+    * ActiGraph Activity Counts (AAC) - [https://cran.r-project.org/web/packages/activityCounts/index.html](https://cran.r-project.org/web/packages/activityCounts/index.html)
+    * Euclidean Norm Minus One (ENMO) - [https://cran.r-project.org/web/packages/GGIR/index.html](https://cran.r-project.org/web/packages/GGIR/index.html)
+    * Monitor Independent Movement Summary (MIMS) [https://cran.r-project.org/web/packages/MIMSunit/index.html](https://cran.r-project.org/web/packages/MIMSunit/index.html)
+
+#### Calculating ENMO
 
 ```{r}
 accel_data <- accel_data %>%
@@ -85,15 +103,21 @@ accel_data <- accel_data %>%
                   enmo = x_g^2+y_g^2+z_g^2,
                   enmo_m1 = (x_g^2+y_g^2+z_g^2)-1
                 )
-```
 
-```{r}
 summary(accel_data$enmo_m1)
 
-accel_data <- dplyr::filter(accel_data, enmo_m1 < 20)
+accel_data <- dplyr::filter(accel_data, enmo_m1 < 20) # Filtering ENMO < 20
 
 summary(accel_data$enmo_m1)
 ```
+
+### 4. Wearing? 
+
+I'm just skipping over this for now. The very common Choi algorithm is a good place for wearing detection. There are others as well. You can find the Choi algorithm in a bunch of different packages including [sleepr](https://rdrr.io/github/dipetkov/actigraph.sleepr/man/apply_choi.html).
+
+### 5. Summarize data
+
+Here we are summarizing the data at the second level (very common) but also sometimes methods use 5 second windows. Windows might be fixed (every 5 seconds) or moving (overlapping 5 seconds). Depends on the method. 
 
 ```{r}
 accel_sec <- accel_data %>%
@@ -108,13 +132,19 @@ accel_sec <- accel_data %>%
          enmo_m1_mg = enmo_m1*1000
         )
 
+rm(accel_data)
+
 summary(accel_sec$enmo_m1_mg)
+
+### Histogram of ENMO
 
 ggplot(accel_sec, aes(enmo_m1_mg)) +
         geom_histogram()
 ```
 
-#### 5. Use the cut points from this [paper](https://doi.org/10.3389/fspor.2020.579278) and create a new variable called `activity`. 
+### 6. Classification
+
+We are going to use the cut points from this [paper](https://doi.org/10.3389/fspor.2020.579278) and create a new variable called `activity`. 
 
 | Activity | Cut Point (enmo_m1) | 
 |----------|-----------|
@@ -147,12 +177,23 @@ plot(fig1)
 
 # GPS Sample Data
 
+## Tasks
+
+1. Read in and make a map
+2. Check accuracy, type, and speed
+3. Check time series
+
+### 1. Read in and make a map
+
 ```{r}
 gps_data <- read_csv("gps_sample_data.csv")
 
 glimpse(gps_data)
 ```
 
+Note that we have two timestamps. One is called `record_time` one is called `satellite_time`. The `satellite_time` is the time recorded by the satellite. That time is extremely accurate and should be taken as correct. The `record_time` is the time on the users phone. 
+
+### Map part 1 
 ```{r}
 gps_plot_1 <- ggplot(gps_data) + 
                   geom_point(aes(x = lon, y = lat)) +
@@ -160,16 +201,164 @@ gps_plot_1 <- ggplot(gps_data) +
 plot(gps_plot_1)
 ```
 
+### Basemap from Google Maps
+
+You need a Google Maps API key for this to work. You can register one here [https://developers.google.com/maps/documentation/maps-static/get-api-key](https://developers.google.com/maps/documentation/maps-static/get-api-key). Setup the key this way using R and the `ggmap` package and this tutorial [https://www.littlemissdata.com/blog/maps](https://www.littlemissdata.com/blog/maps).
+
 ```{r}
 canada_basemap <- get_map(location = "St. John's, Newfoundland, Canada",
                      source = "google",
                      maptype = "roadmap", crop = FALSE,
                      zoom = 12)
+```
 
+### Combine the two maps
+
+```{r}
 maps_points <- ggmap(canada_basemap) + 
                   geom_point(aes(x = lon, y = lat), data = gps_data, alpha = 0.2) + 
                   facet_wrap(~ user_id)
 
 plot(maps_points)
 ```
+
+### 2. Check locations and accuracy
+
+Quick list of things that might happen when you are checking
+
+1. Points at lat,lon = 0.00000,0.00000 [https://goo.gl/maps/h39dCqtZLzFRcYmUA](https://goo.gl/maps/h39dCqtZLzFRcYmUA). Sometimes the GPS resets or goes a bit haywire and you end up with points at this location. Need to remove them. 
+2. Satellite drift happens when the GPS gets stuck tracking the satellite rather than the person. It looks like the person. It looks like someone might be on a plane. Good way to filter this to check speed and filter extremely high speeds. 
+3. Point cloud or star. This is common when someone stays at one location for a long time but you get inaccuracies at every GPS point so you up with something that looks like a star. We will talk about methods to deal with this during the last part of the presentation. 
+
+#### Accuracy
+
+```{r}
+summary(gps_data$accu)
+
+## Filer out inaccuracies more than 200 meters
+gps_data <- gps_data %>% dplyr::filter(accu < 200)
+
+gps_plot_accu <- ggplot(gps_data, aes(x = lon, y = lat,  fill = accu)) + 
+                  geom_point() + 
+                  facet_wrap(~ user_id)
+plot(gps_plot_accu)
+```
+
+#### Signal (GPS or Accel)
+
+```{r}
+table(gps_data$provider)
+```
+
+#### Speed
+
+Filter out speeds greater than 200km/h. These data are in m/s. 1 km/h is equal to 0.27777777777778 meter/second. So 55.6 m/s is around 200km/h. 
+```{r}
+summary(gps_data$speed)
+
+#We are good for speed here. No need to filter. 
+gps_data <- gps_data %>% dplyr::filter(accu < 200)
+
+gps_plot_accu <- ggplot(gps_data, aes(x = lon, y = lat,  fill = accu)) + 
+                  geom_point() + 
+                  facet_wrap(~ user_id)
+plot(gps_plot_accu)
+```
+
+#### Example of drift
+
+Filter out speeds greater than 200km/h. These data are in m/s. 1 km/h is equal to 0.27777777777778 meter/second. So 55.6 m/s is around 200km/h. 
+```{r}
+gps_drift <- read_csv("gps_3213.csv")
+
+drift_plot <- ggplot(gps_drift, aes(x = lon, y = lat)) + 
+                  geom_point() 
+plot(drift_plot)
+
+summary(gps_drift$speed)
+
+#We are good for speed here. No need to filter. 
+gps_drift <- gps_drift %>% dplyr::filter(speed < 55.6) #Starting dataset n = 8266
+## New dataset n = 8176 
+
+drift_plot <- ggplot(gps_drift, aes(x = lon, y = lat)) + 
+                  geom_point() 
+plot(drift_plot)
+```
+
+### 3. Check time series
+
+Here we want to check the time series for the data to do a quick visual inspection of the time series. I will use altitude to make a figure of the time series.
+
+```{r}
+alt_plot <- ggplot(gps_data, aes(x = record_time, y = alt)) + 
+                  geom_point() +
+                  facet_wrap(~ user_id)
+plot(alt_plot)
+```
+
+# Combining the accel and GPS data
+
+## Tasks
+
+1. Reconcile time
+2. Join method
+3. Check data
+4. Wear time criteria
+
+### 1. Reconcile time
+
+We need to have the same unit of time to join the accel and GPS. Normally this would be the second level. We want to join every second of data from both the accel and the GPS data. Some notes.
+
+1. Accelerometer time is going to have [clock drift](https://en.wikipedia.org/wiki/Clock_drift). This means that as the clock goes the time is going to drift one way or the other. Always take the GPS as having accurate time. Some accelerometer brands, notably GeneActiv provide a value for the amount of clock drift that happends during a data collection period. 
+
+You can deal with clock drift in a few ways.
+1. If you have the amount of drift you can just correct the time directly. 
+2. You can also use a bigger window for matching. Use +/- 1 second to match instead of requiring an exact match.
+
+2. No matter what you are going to have to do this step. Many people think that because the accel and GPS data come from the same device this will happen automatically. That is not the case. The chips are different and so the data is collected from different places. As PALMS and HABITUS have shown use, it's a very hard problem to join these data so people don't do it automatically. 
+
+3. Think about your actual research question. Do you really need GPS and accelerometer match data that is precise at +/- 10meters and watch on the exact second? For most of today's research questions in physical activity I don't think so. 
+
+4. Learn about *JOINS* This is large class of methods that put together two or more datasets based on one or more matching keys. There are many useful types of joins (inner_joins, funnel joins). Learning about this can be very helpful for lots of things. 
+
+### 2. Join method
+
+We started with n = 1643194 records in the accel data and n = 5190 in the gps data. What do we expect when we do different types of joins. 
+
+#### Inner join
+
+```{r}
+### Joining the data
+### Lets use a Inner Join here (Who knows that that is?)
+
+accel_sec$record_time <- accel_sec$time
+
+accel_gps_inner <- inner_join(accel_sec, gps_data) # Note the message about the join variables
+```
+
+We end up with only data that is included in both the accel and GPS dataset based on the second and on the user_id. So we have 5064 observations. 
+
+```{r}
+inner_plot <- ggplot(accel_gps_inner, aes(x = lon, y = lat,  colour = factor(activity))) + 
+                  geom_point(alpha = 0.5) + 
+                  facet_wrap(~ user_id)
+plot(inner_plot)
+```
+
+#### Full join
+
+```{r}
+### Joining the data
+### Lets use a Full Join here (Who knows that that is?)
+
+accel_gps_full <- full_join(accel_sec, gps_data) # Note the message about the join variables
+```
+
+We end up with only data that is included in both the accel and GPS dataset based on the second and on the user_id. So we have 201041 observations. We have many many missing values. 
+
+### 4. Wear time criteria
+
+Many PA researchers use different wear time criteria to define what would be a `valid` day or week of physical activity measurement. Things like 10 hours per day, and at least 2 week days, and one weekend day. It is very very difficult to do this when combining accel and GPS data. GPS is much more intensive on the device battery and also tends to crash or have problems way more than accel. I recommend not using wear time criteria, and have successfully argued this this reviewers in at least 3 different papers. 
+
 
